--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0;
 }
 
 .App-header,
@@ -10,5 +11,12 @@
 }
 
 .App-main {
-    flex-grow: 1;
+    flex: 1;
+    padding: 20px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
